# fantasyAI

./: .env  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: filtered_fixtures.json  filtered_players.json  filtered_teams.json  final_players_sorted.json  league_stats.json  teams_cleaned.json
data/original/: fixtures.json  gameweeks.json  players.json  teams.json  user_team.json
src/: __main__.py  ai.py  data_cleaner.py  data_maker.py  notify.py  scraper.py  variables.py
